fullscreen y cambio de mensaje de inicio

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,7 @@
     <button id="btnReset" class="toolbtn">🧨 Reset</button>
     <button id="btnRefresh" class="toolbtn">↻ Refrescar</button>
     <button id="btnSettings" class="toolbtn">⚙ Ajustes</button>
+    <button id="btnFullscreen" class="toolbtn">⛶ Pantalla completa</button>
   </div>
 
   <!-- Vista: Estadísticas -->
@@ -120,3 +121,4 @@
   </section>
 
 {% endblock %}
+
